Parallel build, WIP

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,6 +18,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Docker
         uses: ./.github/actions/setup-docker
+        with:
+          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
+          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build Fedora image
         id: docker_build_fedora
         uses: docker/build-push-action@v2
