--- a/.github/actions/setup-docker/action.yaml
+++ b/.github/actions/setup-docker/action.yaml
@@ -1,4 +1,9 @@
 name: 'setup-docker'
+inputs:
+  docker-user:
+    required: true
+  docker-password:
+    required: true
 runs:
   using: 'composite'
   steps:
@@ -9,8 +14,8 @@ runs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ input.docker-user }}
+        password: ${{ input.docker-password }}
     - name: Cache Docker layers
       uses: actions/cache@v2
       with:
