--- a/.github/actions/setup-docker/action.yaml
+++ b/.github/actions/setup-docker/action.yaml
@@ -14,8 +14,8 @@ runs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        username: ${{ input.docker-user }}
-        password: ${{ input.docker-password }}
+        username: ${{ inputs.docker-user }}
+        password: ${{ inputs.docker-password }}
     - name: Cache Docker layers
       uses: actions/cache@v2
       with:
