--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -91,6 +91,7 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-buster -resize 100 /imgs/test.png avif:/imgs/test-png.avif
           docker run --rm -v $(pwd):/imgs im-buster /imgs/test.pdf /imgs/test-pdf.png
           docker run --rm -v $(pwd):/imgs im-buster /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd):/imgs im-buster /imgs/test.gif /imgs/test-gif.webp
           docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
           docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
           docker run --rm -v $(pwd):/imgs im-buster -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
@@ -141,6 +142,7 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-bullseye -resize 100 /imgs/test.png avif:/imgs/test-png.avif
           docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.pdf /imgs/test-pdf.png
           docker run --rm -v $(pwd):/imgs im-bullseye /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd):/imgs im-bullseye /imgs/test.gif /imgs/test-gif.webp
           docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
           docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
           docker run --rm -v $(pwd):/imgs im-bullseye -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
@@ -191,6 +193,7 @@ jobs:
           docker run --rm -v $(pwd):/imgs im-ubuntu -resize 100 /imgs/test.png avif:/imgs/test-png.avif
           docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.pdf /imgs/test-pdf.png
           docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd):/imgs im-ubuntu /imgs/test.gif /imgs/test-gif.webp
           docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
           docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
           docker run --rm -v $(pwd):/imgs im-ubuntu -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
