--- a/Dockerfile.bullseye
+++ b/Dockerfile.bullseye
@@ -20,6 +20,8 @@ RUN apt-get -y update && \
     libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libgomp1 ghostscript libxml2-dev libxml2-utils libtiff-dev libfontconfig1-dev libfreetype6-dev fonts-dejavu liblcms2-2 liblcms2-dev \
     # Install manually to prevent deleting with -dev packages \
     libxext6 && \
+    # Removing distro's libwebp \
+    dpkg -P --force-depends libwebp6 && \
     # Building libwebp
     git clone https://chromium.googlesource.com/webm/libwebp && \
     cd libwebp && git checkout v${LIB_WEBP_VERSION} && \
@@ -27,8 +29,6 @@ RUN apt-get -y update && \
     make && make install && \
     ldconfig /usr/local/lib && \
     cd ../ && rm -rf libwebp && \
-    # Removing distro's libwebp \
-    dpkg -P --force-depends libwebp6 && \
     # Building libaom
     git clone https://aomedia.googlesource.com/aom && \
     cd aom && git checkout v${LIB_AOM_VERSION} && cd .. && \
@@ -50,7 +50,11 @@ RUN apt-get -y update && \
     ./configure --without-magick-plus-plus --disable-docs --disable-static --with-tiff && \
     make && make install && \
     ldconfig /usr/local/lib && \
+    # Installing libweb6 back to mke autoremove work
+    apt --fix-broken install && \
     apt-get remove --autoremove --purge -y gcc make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libde265-dev libx265-dev libxml2-dev libtiff-dev libfontconfig1-dev libfreetype6-dev liblcms2-dev libsdl1.2-dev libgif-dev && \
+    # Removing distro's libwebp \
+    dpkg -P --force-depends libwebp6 && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
