--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -2,7 +2,7 @@ FROM ubuntu:focal
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-ARG IM_VERSION=7.1.0-44
+ARG IM_VERSION=7.1.0.43
 ARG LIB_HEIF_VERSION=1.12.0
 ARG LIB_AOM_VERSION=3.4.0
 ARG LIB_WEBP_VERSION=1.2.3
