--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -2,7 +2,7 @@ FROM debian:buster-slim
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-ARG IM_VERSION=7.1.0.43
+ARG IM_VERSION=7.1.0-45
 ARG LIB_HEIF_VERSION=1.12.0
 ARG LIB_AOM_VERSION=3.4.0
 ARG LIB_WEBP_VERSION=1.2.3
