--- a/Dockerfile.bullseye
+++ b/Dockerfile.bullseye
@@ -6,20 +6,34 @@ ARG IM_VERSION=7.1.0-46
 ARG LIB_HEIF_VERSION=1.12.0
 ARG LIB_AOM_VERSION=3.4.0
 ARG LIB_WEBP_VERSION=1.2.4
+ARG LIBJXL_VERSION=0.6.1
 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
-    apt-get install -y git make gcc pkg-config autoconf curl g++ \
+    apt-get install -y git make gcc pkg-config autoconf curl g++ cmake clang \
     # libaom
-    yasm cmake \
+    yasm \
     # libheif
     libde265-0 libde265-dev libjpeg62-turbo libjpeg62-turbo-dev x265 libx265-dev libtool \
     # libwebp
     libsdl1.2-dev libgif-dev \
+    # libjxl
+    libbrotli-dev && \
     # IM
     libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libgomp1 ghostscript libxml2-dev libxml2-utils libtiff-dev libfontconfig1-dev libfreetype6-dev fonts-dejavu liblcms2-2 liblcms2-dev \
-    # Install manually to prevent deleting with -dev packages \
+    # Install manually to prevent deleting with -dev packages
     libxext6 && \
+    # Building libjxl
+    RUN export CC=clang CXX=clang++ && \
+    RUN git clone -b v{LIBJXL_VERSION} https://github.com/libjxl/libjxl.git --depth 1 --recursive --shallow-submodules && \
+    RUN cd libjxl && \
+    RUN mkdir build && \
+    RUN cd build && \
+    RUN cmake -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF .. && \
+    RUN cmake --build . -- -j$(nproc) && \
+    RUN cmake --install . && \
+    RUN cd ../../ && \
+    rm -rf libjxl && \
     # Building libwebp
     git clone -b v${LIB_WEBP_VERSION} --depth 1 https://chromium.googlesource.com/webm/libwebp && \
     cd libwebp && \
@@ -47,7 +61,7 @@ RUN apt-get -y update && \
     ./configure --without-magick-plus-plus --disable-docs --disable-static --with-tiff && \
     make && make install && \
     ldconfig /usr/local/lib && \
-    apt-get remove --autoremove --purge -y gcc make cmake curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libde265-dev libx265-dev libxml2-dev libtiff-dev libfontconfig1-dev libfreetype6-dev liblcms2-dev libsdl1.2-dev libgif-dev && \
+    apt-get remove --autoremove --purge -y gcc make cmake clang curl g++ yasm git autoconf pkg-config libpng-dev libjpeg62-turbo-dev libde265-dev libx265-dev libxml2-dev libtiff-dev libfontconfig1-dev libfreetype6-dev liblcms2-dev libsdl1.2-dev libgif-dev libbrotli-dev && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
