--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -34,6 +34,7 @@ RUN apt-get -y update && \
     cmake --install . && \
     cd ../../ && \
     rm -rf libjxl && \
+    ldconfig /usr/local/lib && \
     # Building libwebp
     git clone -b v${LIB_WEBP_VERSION} --depth 1 https://chromium.googlesource.com/webm/libwebp && \
     cd libwebp && \
