--- a/Dockerfile.bullseye
+++ b/Dockerfile.bullseye
@@ -22,7 +22,7 @@ RUN apt-get -y update && \
     # IM
     libpng16-16 libpng-dev libjpeg62-turbo libjpeg62-turbo-dev libgomp1 ghostscript libxml2-dev libxml2-utils libtiff-dev libfontconfig1-dev libfreetype6-dev fonts-dejavu liblcms2-2 liblcms2-dev \
     # Install manually to prevent deleting with -dev packages
-    libxext6 libbrotli && \
+    libxext6 libbrotli1 && \
     # Building libjxl
     export CC=clang CXX=clang++ && \
     git clone -b v${LIBJXL_VERSION} https://github.com/libjxl/libjxl.git --depth 1 --recursive --shallow-submodules && \
