--- a/.github/actions/setup-docker/action.yaml
+++ b/.github/actions/setup-docker/action.yaml
@@ -1,4 +1,5 @@
 name: 'setup-docker'
+description: Setting up docker
 inputs:
   docker-user:
     required: true
@@ -12,7 +13,7 @@ runs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
     - name: Login to DockerHub
-      uses: docker/login-action@v1
+      uses: docker/login-action@v2
       with:
         username: ${{ inputs.docker-user }}
         password: ${{ inputs.docker-password }}
