--- a/Dockerfile.bullseye
+++ b/Dockerfile.bullseye
@@ -10,7 +10,7 @@ ARG LIBJXL_VERSION=0.7.0
 
 RUN apt-get -y update && \
     apt-get -y upgrade && \
-    apt-get install -y git make pkg-config autoconf curl cmake clang \
+    apt-get install -y --no-install-recommends git make pkg-config autoconf curl cmake clang libomp-dev \
     # libaom
     yasm \
     # libheif
