Add WORKDIR /imgs to the Dockerfile https://github.com/dooman87/imagemagick-docker/issues/34

--- a/Dockerfile.bullseye
+++ b/Dockerfile.bullseye
@@ -66,4 +66,6 @@ RUN apt-get -y update && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
+WORKDIR /imgs
+
 ENTRYPOINT ["convert"]
