--- a/Dockerfile.buster
+++ b/Dockerfile.buster
@@ -51,4 +51,6 @@ RUN apt-get -y update && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
+WORKDIR /imgs
+
 ENTRYPOINT ["convert"]
