--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -66,4 +66,6 @@ RUN apt-get -y update && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /ImageMagick
 
+WORKDIR /imgs
+
 ENTRYPOINT ["convert"]
