IM 7.1.1-21, added debian bookworm image

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -69,6 +69,64 @@ jobs:
           tags: dpokidov/imagemagick:${{ github.event.release.tag_name }},dpokidov/imagemagick:${{ github.event.release.tag_name }}-bullseye,dpokidov/imagemagick:latest-bullseye,dpokidov/imagemagick:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+  build-debian-bookworm:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Docker
+        uses: ./.github/actions/setup-docker
+        with:
+          docker-user: ${{ secrets.DOCKERHUB_USERNAME }}
+          docker-password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build Debian Bookworm Image
+        id: docker_build_bookworm
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile.bookworm
+          push: false
+          load: true
+          tags: im-bookworm
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+      - name: Testing Debian Bookworm Image
+        run: |
+          docker run --rm im-bookworm -list configure
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 500 /imgs/test.jpg /imgs/test-resize.jpg
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 500 /imgs/test.jpg webp:/imgs/test-jpg.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 500 /imgs/test.jpg avif:/imgs/test-jpg.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png /imgs/test-resize.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png webp:/imgs/test-png.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png avif:/imgs/test-png.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 100 /imgs/test.png jxl:/imgs/test-png.jxl
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm /imgs/test.pdf /imgs/test-pdf.png
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm /imgs/jpg-with-metadata.jpg /imgs/jpg-with-metadata.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -coalesce /imgs/test.gif /imgs/test-gif.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff /imgs/test-resize.tiff
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff webp:/imgs/test-tiff.webp
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff avif:/imgs/test-tiff.avif
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm -resize 200 /imgs/test.tiff jxl:/imgs/test-tiff.jxl
+          docker run --rm -v $(pwd)/test-images:/imgs im-bookworm /imgs/test.jpg -antialias -font DejaVu-Sans -pointsize 20 -gravity Southeast -annotate +15+15 'TEST' /imgs/test-text.jpg
+          docker run --rm im-bookworm -list configure | grep DELEGATES | grep "fontconfig freetype heic jbig jng jpeg jxl lcms lzma png ps tiff webp x xml zlib"
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v3
+        with:
+          name: bookworm-tests
+          path: test-images
+      - name: Push Debian Bookworm image
+        id: docker_push_bookworm
+        if: ${{ github.event_name == 'release' }}
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile.bookworm
+          push: true
+          load: false
+          platforms: linux/amd64,linux/arm64
+          tags: dpokidov/imagemagick:${{ github.event.release.tag_name }}-bookworm,dpokidov/imagemagick:latest-bookworm
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
   build-ubuntu:
     runs-on: ubuntu-20.04
     steps:
